--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-perplexity-concat",
+    "name": "perplexity-concat",
     "private": true,
     "version": "0.0.0",
     "type": "module",
